--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rimraf dist",
     "build": "babel ./src --out-dir dist",
     "prod": "SET NODE_ENV=production npm-run-all clean build server:prod",
-    "watch": "nodemon"
+    "watch": "nodemon",
+    "debug": "nodemon --inspect"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
