--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "scripts": {
     "start": "node ./bin/www",
     "server": "babel-node ./src/bin/www",
-    "dev": "NODE_ENV=development npm-run-all server",
+    "dev": "cross-env NODE_ENV=development npm-run-all server",
     "clean": "rimraf dist",
     "build": "babel ./src --out-dir dist",
-    "prod": "SET NODE_ENV=production npm-run-all clean build server:prod",
+    "prod": "cross-env NODE_ENV=production npm-run-all clean build server:prod",
     "watch": "nodemon",
     "debug": "nodemon --inspect"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cross-env": "^6.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
