--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^6.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.17.1",
+    "mysql": "^2.18.1",
     "npm-run-all": "^4.1.5",
-    "request": "^2.88.0",
-    "rimraf": "^3.0.0"
+    "request": "^2.88.2",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0",
-    "nodemon": "^1.19.2"
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "nodemon": "^1.19.4"
   }
 }
